Added a script to periodically backup the /var/repo directory to GCS

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -39,3 +39,9 @@ stderr_logfile=/var/log/app_engine/custom_logs/git_notes_mirror_err.log
 # that are more than 10 minutes old.
 command=killall --older-than 10m git-remote-https
 events=TICK_60
+
+[eventlistener:backup]
+# We periodically create a tarball of the /var/repo directory, and copy it to GCS
+command=/opt/backup.sh
+stderr_logfile=/var/log/app_engine/custom_logs/backup_err.log
+events=TICK_60
