Fix two issues with the once-per-minute supervisord event handlers:
1. The command to kill the hanging git processes was not a proper event handler. This resulted in only the first invocation working.
2. The event handler for backups was not waiting for new events, so we were effectively continuously backing up.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -37,7 +37,8 @@ stderr_logfile=/var/log/app_engine/custom_logs/git_notes_mirror_err.log
 # We periodically have git-remote-https processes that hang indefinitely, and block other things
 # from working. To catch this, every 60 seconds we run a command that kills any such processes
 # that are more than 10 minutes old.
-command=killall --older-than 10m git-remote-https
+command=/opt/kill-hanging-git-commands.sh
+stderr_logfile=/var/log/app_engine/custom_logs/kill-hanging-git-commands_err.log
 events=TICK_60
 
 [eventlistener:backup]
