Two changes to improve the readability of the supervisord event listeners:
1. Remove the looping (replacing them with autorestarts by supervisord), so that the code matches exactly what is needed for processing a single event.
2. Add comments for each part of the code that corresponds to the supervisord event protocol, to document what each command means.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -39,10 +39,14 @@ stderr_logfile=/var/log/app_engine/custom_logs/git_notes_mirror_err.log
 # that are more than 10 minutes old.
 command=/opt/kill-hanging-git-commands.sh
 stderr_logfile=/var/log/app_engine/custom_logs/kill-hanging-git-commands_err.log
+autorestart=true
+startretries=2147483647
 events=TICK_60
 
 [eventlistener:backup]
 # We periodically create a tarball of the /var/repo directory, and copy it to GCS
 command=/opt/backup.sh
 stderr_logfile=/var/log/app_engine/custom_logs/backup_err.log
+autorestart=true
+startretries=2147483647
 events=TICK_60
