--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,16 +3,20 @@ nodaemon=true
 logfile=/var/log/app_engine/custom_logs/supervisord.log
 loglevel=warn
 
-[program:apache2]
-command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
-
-[program:phd]
+[eventlistener:startup]
 command=/opt/phabricator/bin/phd start
-autostart=true
-autorestart=true
-startretries=2147483647
 stdout_logfile=/var/log/app_engine/custom_logs/phd_start.log
 stderr_logfile=/var/log/app_engine/custom_logs/phd_start_err.log
+events=SUPERVISOR_STATE_CHANGE_RUNNING
+
+[eventlistener:shutdown]
+command=/opt/phabricator/bin/phd stop
+stdout_logfile=/var/log/app_engine/custom_logs/phd_stop.log
+stderr_logfile=/var/log/app_engine/custom_logs/phd_stop_err.log
+events=SUPERVISOR_STATE_CHANGE_STOPPING
+
+[program:apache2]
+command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
 [program:setup_arcrc]
 command=/opt/setup_arcrc.sh
