Make the image shutdown supervisord (and, as a result, the Phabricator daemons) when it receives the VM lifecycle stop request

--- a/phabricator.conf
+++ b/phabricator.conf
@@ -1,10 +1,13 @@
 <VirtualHost *:8080>
         DocumentRoot /opt/phabricator/webroot
+        SetEnvIf Request_URI "^/_ah/stop" shutdown
+        CustomLog /var/log/app_engine/custom_logs/shutdown.log common env=shutdown
         CustomLog /var/log/app_engine/custom_logs/access.log combined
         ErrorLog /var/log/app_engine/custom_logs/apache_phabricator_err.log
 
         RewriteEngine on
         RewriteRule ^/_ah/health    -                       [L,QSA]
+        RewriteRule ^/_ah/stop      -                       [L,QSA]
         RewriteRule ^/rsrc/(.*)     -                       [L,QSA]
         RewriteRule ^/favicon.ico   -                       [L,QSA]
         RewriteRule ^(.*)$          /index.php?__path__=$1  [B,L,QSA]
