--- a/supervisord.conf
+++ b/supervisord.conf
@@ -54,3 +54,8 @@ stderr_logfile=/var/log/app_engine/custom_logs/backup_err.log
 autorestart=true
 startretries=2147483647
 events=TICK_60
+
+[eventlistener:check_for_shutdown]
+# We periodically check if we've recieved a shutdown request
+command=/opt/shutdown-check.sh
+events=TICK_5
