Simplified the shutdown logic by removing the event handler and moving that logic into the script which polls for shutdown requests

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,12 +9,6 @@ stdout_logfile=/var/log/app_engine/custom_logs/phd_start.log
 stderr_logfile=/var/log/app_engine/custom_logs/phd_start_err.log
 events=SUPERVISOR_STATE_CHANGE_RUNNING
 
-[eventlistener:shutdown]
-command=/opt/phabricator/bin/phd stop
-stdout_logfile=/var/log/app_engine/custom_logs/phd_stop.log
-stderr_logfile=/var/log/app_engine/custom_logs/phd_stop_err.log
-events=SUPERVISOR_STATE_CHANGE_STOPPING
-
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
@@ -58,4 +52,8 @@ events=TICK_60
 [eventlistener:check_for_shutdown]
 # We periodically check if we've recieved a shutdown request
 command=/opt/shutdown-check.sh
+stdout_logfile=/var/log/app_engine/custom_logs/shutdown_check.log
+stderr_logfile=/var/log/app_engine/custom_logs/shutdown_check_err.log
+autorestart=true
+startretries=2147483647
 events=TICK_5
