Changed the shutdown check to run continuously rather than every 5 seconds

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,6 +9,14 @@ stdout_logfile=/var/log/app_engine/custom_logs/phd_start.log
 stderr_logfile=/var/log/app_engine/custom_logs/phd_start_err.log
 events=SUPERVISOR_STATE_CHANGE_RUNNING
 
+[eventlistener:check_for_shutdown]
+# We periodically check if we've recieved a shutdown request
+command=/opt/shutdown-check.sh
+stderr_logfile=/var/log/app_engine/custom_logs/shutdown_check_err.log
+autorestart=true
+startretries=2147483647
+events=SUPERVISOR_STATE_CHANGE_RUNNING
+
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
 
@@ -48,11 +56,3 @@ stderr_logfile=/var/log/app_engine/custom_logs/backup_err.log
 autorestart=true
 startretries=2147483647
 events=TICK_60
-
-[eventlistener:check_for_shutdown]
-# We periodically check if we've recieved a shutdown request
-command=/opt/shutdown-check.sh
-stderr_logfile=/var/log/app_engine/custom_logs/shutdown_check_err.log
-autorestart=true
-startretries=2147483647
-events=TICK_5
