--- a/config/app.yaml
+++ b/config/app.yaml
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-module: phabricator
+service: phabricator
 runtime: custom
 vm: true
 api_version: 1
